--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> />
 
-    <link rel="stylesheet" href="./styles/styles.css" />
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <header class="centered_item">
+    <header class="centered_items">
       <img class="bouncy-img" src="./happy-tree.jpg" alt="a smiling tree" />
       <h1> All About Trees</h1>
       <img class="bouncy-img" src="./happy-tree.jpg" alt="a smiling tree" />
      </header>
      <nav class="bottom-divider">
-       <div class="spaced-item">
+       <div class="spaced-items">
          <a href="#summary-info">intro</a>
          <a href="#main-info">content</a>
          <a href="#extra-info">extras</a>
@@ -69,7 +69,7 @@
        </ul>
      </article>
 
-     <footer class="top-driver spaced-item">
+     <footer class="top-driver spaced-items">
        <a href="">twitter</a> <a href="">github</a> <a href="">linkedin</a>
      </footer>
   </body>
